chore: gen queries
